--- a/jade-theme-sass/jade.scss
+++ b/jade-theme-sass/jade.scss
@@ -725,7 +725,7 @@ div.marginleft:hover {
   }
 
   #app-logo {
-    background-image: url("../../img/jade-logo.svg");
+    background-image: url("../../img/mer-logo.svg");
     height: 160px;
     background-size: 120px 120px;
     background-position: center;
@@ -735,7 +735,7 @@ div.marginleft:hover {
 
   #app-name {
     font-weight: bold;
-    color: $orange;
+    color: #ff6600ff;
     font-size: 15px;
   }
 
